# libpci-rs

./: .gitignore  Cargo.toml  Makefile  build.rs
compat/: Cargo.toml  api.hpp  build.rs  common.cc  lib.rs
compat/darwin/: mod.cc
compat/src/: CMakeLists.txt  api.h  common.c  common.cc  stub.c
compat/src/darwin/: mod.c
compat/src/tests/: test_stack.c  test_stack.cpp
src/: lib.rs  pci.rs
src/backend/: common.rs  compat.rs  mod.rs
src/backend/c/: CMakeLists.txt
