[package]
name = "libpci-rs"
description = "A cross-platform library to detect and list PCI devices and their information."
authors = [ "NamedNeon", "shibedrill" ]
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/NamedNeon/libpci-rs"
documentation = "https://docs.rs/libpci-rs"
readme = "README.md"
categories = ["Operating systems", "PCI", "Bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "openbsd", target_os = "macos", target_os = "freebsd"))'.dependencies]
compat = { path = "./compat" } # C/C++ OS backends.

[dependencies]
cfg-if = "1.0.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation"
]

[dev-dependencies]
fastrand = "2.0.0"
